--- a/1.html
+++ b/1.html
@@ -3,24 +3,31 @@
   <head>
     <title> WEB1 - HTML </title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
   </head>
-
   <body>
-    <h1><a href="index.html"> WEB </a></h1>
-    <ol>
-      <li> <a href="1.html"> HTML </a><br></li>
-      <li> <a href="2.html"> Css </a> <br></li>
-      <li> <a href="3.html"> JavaScript </a><br></li>
-    </ol>
-    <h2> HTML이란 무엇인가? </h2>
-    <p><a href="https://www.w3.org/TR/html52/" target="_blank" title="html5 specification"><strong>Hypertext markup language (HTML)</strong></a> is the standard markup
-    language for <strong>creating <u>web</u> pages </strong> and web appliation.
-    web broewsers receive html documents from a web server of fro local storage web broewsers receive </p>
+    <h1><a href="index.html">WEB</a></h1>
+      <div id="grid">
+        <ol>
+          <li> <a href="1.html">HTML</a></li>
+          <li> <a href="2.html">Css</a></li>
+          <li> <a href="3.html">JavaScript</a></li>
+        </ol>
+        <div id="article">
+          <h2>What is HTML ?</h2>
+          <p><iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+          <p><a href="https://www.w3.org/TR/html52/" target="_blank" title="html5 specification"><strong>Hypertext markup language (HTML)</strong></a> is the standard markup
+          language for <strong>creating <u>web</u> pages </strong> and web appliation.
+          web broewsers receive html documents from a web server of fro local storage web broewsers receive </p>
+          <p style="padding-left:30px;"><img src="html.jpg" width="200"> </p>
 
-    <p> html documents from a web server of fro local storage
-    web broewsers receive html documents from a web server of fro local storageweb<br><img src="html.jpg" width="200"> </p>
-
-    receive html documents from a web server of fro local storageweb broewsers receive html documents from a web server of fro local storage web broewsers receive html documents from a web server of fro local storage web broewsers receive html documents from a web server of fro local storage web broewsers receive html documents from a web server of fro local storage web broewsers receive html documents from a web server of
-    <p style="margin-top:25px;"> fro local storage web broewsers receive html documents from a web server of fro local storage </p>
-  </body>
+          Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web
+          applications. With Cascading Style Sheets (CSS) and JavaScript, it forms a triad of cornerstone
+          technologies for the World Wide Web.[4] Web browsers receive HTML documents from a web server or
+          from local storage and render the documents into multimedia web pages. HTML describes the structure
+           of a web page semantically and originally included cues for the appearance of the document.</p>
+         </p>
+     </div>
+   </div>
+ </body>
 </html>
