--- a/2.html
+++ b/2.html
@@ -3,16 +3,29 @@
   <head>
     <title> WEB1 - Css </title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    <h1><a href="index.html"> CSS </a></h1>
-    <ol>
-      <li> <a href="1.html"> HTML </a><br></li>
-      <li> <a href="2.html"> Css </a> <br></li>
-      <li> <a href="3.html"> JavaScript </a><br></li>
-    </ol>
-    <h2> CSS이란 무엇인가? </h2>
-    <p> 이곳은 CSS 페이지 </p>
+    <h1><a href="index.html">WEB</a></h1>
+    <div id="grid">
+      <ol>
+        <li> <a href="1.html">HTML</a></li>
+        <li> <a href="2.html">Css</a></li>
+        <li> <a href="3.html">JavaScript</a></li>
+      </ol>
+        <div id="article">
+          <h2>What is CSS ?</h2>
+          <p><iframe width="540" height="300" src="https://www.youtube.com/embed/AL8RSY8rADY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+          <p>
+            CSS is designed to enable the separation of presentation and content,
+            including layout, colors, and fonts.[3] This separation can improve content
+            accessibility, provide more flexibility and control in the specification of
+            presentation characteristics, enable multiple web pages to share formatting by
+            specifying the relevant CSS in a separate .css file, and reduce complexity and
+            repetition in the structural content.
+          </p>
+      </div>
+    </div>
   </body>
 </html>
