--- a/3.html
+++ b/3.html
@@ -3,16 +3,29 @@
   <head>
     <title> WEB1 - JavaScript </title>
     <meta charset="utf-8">
+      <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    <h1><a href="index.html"> JavaScript </a></h1>
-    <ol>
-      <li> <a href="1.html"> HTML </a><br></li>
-      <li> <a href="2.html"> Css </a> <br></li>
-      <li> <a href="3.html"> JavaScript </a><br></li>
-    </ol>
-    <h2> JavaScript 무엇인가? </h2>
-    <p> 이곳은 JavaScript 페이지</p>
+    <h1><a href="index.html">WEB</a></h1>
+    <div id="grid">
+      <ol>
+        <li> <a href="1.html">HTML</a></li>
+        <li> <a href="2.html">Css</a></li>
+        <li> <a href="3.html">JavaScript</a></li>
+      </ol>
+      <div id="article">
+        <h2>What is JavaScript ?</h2>
+        <p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/djBrHjeitUo" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </p>
+        <p>
+          JavaScript (/ˈdʒɑːvəˌskrɪpt/),[8] often abbreviated as JS, is a high-level, interpreted programming
+          language that conforms to the ECMAScript specification. It is a language that is also characterized as
+          dynamic, weakly typed, prototype-based and multi-paradigm.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
