--- a/index.html
+++ b/index.html
@@ -3,16 +3,33 @@
   <head>
     <title> WEB1 - Welcome </title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    <h1><a href="index.html"> WEB </a></h1>
-    <ol>
-      <li> <a href="1.html"> HTML </a><br></li>
-      <li> <a href="2.html"> Css </a> <br></li>
-      <li> <a href="3.html"> JavaScript </a><br></li>
-    </ol>
-    <h2> WEB이란 무엇인가? </h2>
-    <p>World wide web</p>
+    <h1><a href="index.html">WEB</a></h1>
+      <div id="grid">
+        <ol>
+          <li> <a href="1.html">HTML</a></li>
+          <li> <a href="2.html">Css</a></li>
+          <li> <a href="3.html">JavaScript</a></li>
+        </ol>
+        <div id="article">
+          <h2>What is WEB ?</h2>
+          <p>Let's start to learn about WEB !</p>
+          <p>
+            <iframe width="700" height="400" src="https://www.youtube.com/embed/7T7r_oSp0SE" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </p>
+          <p>
+            The World Wide Web, also known as the WWW and the Web, is an information space where documents and other
+            web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and
+            accessible via the Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989.
+            He wrote the first web browser in 1990 while employed at CERN near Geneva, Switzerland.[2][3]
+            The browser was released outside CERN in 1991, first to other research institutions starting in January 1991
+            and to the general public on the Internet in August 1991.
+          </p>
+        </div>
+      </div>
   </body>
 </html>
