--- a/3.html
+++ b/3.html
@@ -17,15 +17,22 @@
       <div id="article">
         <h2>What is JavaScript ?</h2>
         <p>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/djBrHjeitUo" frameborder="0"
+          <iframe width="800" height="500" src="https://www.youtube.com/embed/djBrHjeitUo" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </p>
-        <p>
-          JavaScript (/ˈdʒɑːvəˌskrɪpt/),[8] often abbreviated as JS, is a high-level, interpreted programming
-          language that conforms to the ECMAScript specification. It is a language that is also characterized as
-          dynamic, weakly typed, prototype-based and multi-paradigm.
-        </p>
+          <p>
+            JavaScript (/ˈdʒɑːvəˌskrɪpt/),[8] often abbreviated as JS, is a high-level, interpreted programming
+            language that conforms to the ECMAScript specification. It is a language that is also characterized as
+            dynamic, weakly typed, prototype-based and multi-paradigm.<br>
+            JavaScript (/ˈdʒɑːvəˌskrɪpt/),[8] often abbreviated as JS, is a high-level, interpreted programming
+            language that conforms to the ECMAScript specification. It is a language that is also characterized as
+            dynamic, weakly typed, prototype-based and multi-paradigm.<br>
+            It is a language that is also characterized as dynamic, weakly typed, prototype-based and multi-paradigm.
+          </p>
       </div>
     </div>
+    <footer>
+      <p> copyrignt.wjsrn93 2019.01.09 with 생활코딩</p>
+  </footer>
   </body>
 </html>
