--- a/1.html
+++ b/1.html
@@ -15,19 +15,27 @@
         </ol>
         <div id="article">
           <h2>What is HTML ?</h2>
-          <p><iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-          <p><a href="https://www.w3.org/TR/html52/" target="_blank" title="html5 specification"><strong>Hypertext markup language (HTML)</strong></a> is the standard markup
-          language for <strong>creating <u>web</u> pages </strong> and web appliation.
-          web broewsers receive html documents from a web server of fro local storage web broewsers receive </p>
-          <p style="padding-left:30px;"><img src="html.jpg" width="200"> </p>
+          <p>
+            <iframe width="800" height="500" src="https://www.youtube.com/embed/7T7r_oSp0SE" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </p>
+          <p>
+            <a href="https://www.w3.org/TR/html52/" target="_blank" title="html5 specification">
+            <strong>Hypertext markup language (HTML)</strong></a> is the standard markup
+            language for <strong>creating <u>web</u> pages </strong> and web appliation.
+            web broewsers receive html documents from a web server of fro local storage web broewsers receive </p>
+            <p style="padding-left:30px;"><img src="html.jpg" width="200"> </p>
 
-          Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web
-          applications. With Cascading Style Sheets (CSS) and JavaScript, it forms a triad of cornerstone
-          technologies for the World Wide Web.[4] Web browsers receive HTML documents from a web server or
-          from local storage and render the documents into multimedia web pages. HTML describes the structure
-           of a web page semantically and originally included cues for the appearance of the document.</p>
+            Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web
+            applications. With Cascading Style Sheets (CSS) and JavaScript, it forms a triad of cornerstone
+            technologies for the World Wide Web.[4] Web browsers receive HTML documents from a web server or
+            from local storage and render the documents into multimedia web pages. HTML describes the structure
+            of a web page semantically and originally included cues for the appearance of the document.</p>
          </p>
      </div>
    </div>
+     <footer>
+       <p> copyrignt.wjsrn93 2019.01.09 with 생활코딩</p>
+   </footer>
  </body>
 </html>
