--- a/2.html
+++ b/2.html
@@ -16,7 +16,7 @@
       </ol>
         <div id="article">
           <h2>What is CSS ?</h2>
-          <p><iframe width="540" height="300" src="https://www.youtube.com/embed/AL8RSY8rADY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+          <p><iframe width="800" height="500" src="https://www.youtube.com/embed/AL8RSY8rADY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
           <p>
             CSS is designed to enable the separation of presentation and content,
             including layout, colors, and fonts.[3] This separation can improve content
@@ -27,5 +27,8 @@
           </p>
       </div>
     </div>
+    <footer>
+      <p> copyrignt.wjsrn93 2019.01.09 with 생활코딩</p>
+  </footer>
   </body>
 </html>
