--- a/index.html
+++ b/index.html
@@ -3,41 +3,14 @@
   <head>
     <title> WEB1 - Welcome </title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <script src="colors.js"></script>
   </head>
 
   <body>
     <h1><a href="index.html">WEB</a></h1>
 
-    <input type="button" value="night" onclick="
-
-    var target =   document.querySelector('body');
-
-    if(this.value === 'night'){
-      target.style.backgroundColor = 'black';
-      target.style.color = 'white';
-      this.value = 'day';
-
-      var alist = document.querySelectorALL('a');
-      var i = 0;
-      while( i < alist.length){
-        alist[i].style.color = 'powderblue';
-        i++;
-      }
-
-    } else {
-      target.style.backgroundColor = 'white';
-      target.style.color='black';
-      this.value= 'night';
-
-      var alist = document.querySelectorALL('a');
-      var i = 0;
-      while( i < alist.length){
-        alist[i].style.color = 'blue';
-        i++;
-      }
-    }
-    ">
+    <input id="night_day" type="button" value="night"
+    onclick="nightDayHandler(this);">
 
       <div id="grid">
         <ol>
